--- a/index.html
+++ b/index.html
@@ -9,15 +9,50 @@
 
 </head>
 <body>
-    <nav class="px-4 py-4 bg-purple-800 text-white ">
+    <!-- <nav class="px-4 py-4 bg-purple-800 text-white ">
         <ul class="flex justify-end space-x-10 mr-12">
             <li class="mx-2 cursor-pointer hover:text-gray-400 px-2">Home</li>
             <li class="mx-2 cursor-pointer hover:text-gray-400 px-2">About</li> 
             <li class="mx-2 cursor-pointer hover:text-gray-400 px-2">Exit</li> 
         </ul>
-    </nav>
-    <div class="h-80 bg-fuchsia-300">
-        <h1 class="text-blue-200">This is blue</h1>
+    </nav> -->
+    <div class="h-screen flex">
+        <div id="left" class= "flex flex-col justify-center items-center align-middle  bg-fuchsia-800">
+            <p class="text-white text-5xl font-bold px-10">Welcome to</p>
+            <p class="text-white text-7xl font-bold px-10">SecuraSpeak</p>
+        </div>
+        <div id="right" class="flex flex-1 justify-center items-center order-1  bg-fuchsia-300">
+            <div class="p-6 w-96 bg-white rounded-md ">
+                <div class="header flex flex-col items-center">
+                    <img src="https://cdn-icons-png.flaticon.com/512/6681/6681204.png" alt="Login png" class="h-5">
+                    <h2 class="text-black text-center text-3xl font-semibold">
+                    Login
+                    </h2>
+                    <hr class="mt-3">
+                </div>
+                <div class="mt-3 username flex text-left">
+                    <label for="username" class="block text-base mt-3 mb-2 mr-5">Username</label>
+                    <input type="text" id="username" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter username...">
+                </div>
+                <div class="mt-3 username flex text-left" >
+                    <label for="password" class="block text-base mb-2 mr-6 mt-3">Password</label>
+                    <input type="password" id="password" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600" placeholder="Enter Password..." />
+                </div>
+                <div class="mt-5 flex justify-center">
+                    <div class="mr-8">
+                        <input type="checkbox">
+                        <label for="Remember">Remember Me</label>
+                    </div>
+                    <div class="ml-8">
+                        <a href="#" class="text-indigo-800 font-semibold">Forgot Password?</a>
+                    </div>
+                </div>
+                <div>
+                    <button type="submit"> </button>
+                </div>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
